# beatflower

./: .gitmodules  CMakeLists.txt  GNUmakefile  Makefile  README.md  beatflower.c  beatflower.h  beatflower_renderer.h  beatflower_renderer_sdl.c  beatflower_renderer_sdl.h  beatflower_sdl_renderer.c  beatflower_sdl_renderer.h  beatflower_winamp.cbp  beatflower_winamp.depend  beatflower_winamp.h  beatflower_winamp.ncb  beatflower_winamp.sln  beatflower_winamp.vcproj  beatflower_winamp_plugin.c  beatflower_xmms.h  beatflower_xmms_config.c  beatflower_xmms_plugin.c  beatflower_xmms_settings.c  default_config.ini
CMakeModules/: FindGTK.cmake
WinampSDK/gen_ml/: itemlist.cpp  itemlist.h
WinampSDK/gen_tray/: trayctl.c
WinampSDK/lang_b/: resource.hm
WinampSDK/ml_http/: HTMLControl.cpp  ml_http.rc  preferences.cpp
WinampSDK/ml_xmlex/: ml_xmlex.vcproj
WinampSDK/nu/: MediaLibraryInterface.h
gen_ml/ml_ex/: view_ex.cpp
iTunesVisualAPI/: iTunesVisualAPI.h
iTunesVisualsWindowsSDK/: iTunesPlugIn.vcxproj  iTunesPlugIn.vcxproj.filters  iTunesPlugInMac.mm
iTunesVisualsWindowsSDK/iTunesPlugIn.xcodeproj/: project.pbxproj
iTunesVisualsWindowsSDK/iTunesVisualAPI/: iTunesAPI.h
itunes-visuals-windows-sdk/: ReadMe.rtf  iTunesPlugIn.cpp  iTunesPlugIn.h  iTunesPlugIn.sln  iTunesPlugInWin.cpp  iTunes_Visualizer-Info.plist
itunes-visuals-windows-sdk/English.lproj/: ConfigurePanel.xib
itunes-visuals-windows-sdk/iTunesPlugIn.xcodeproj/: project.pbxproj
itunes-visuals-windows-sdk/iTunesVisualAPI/: iTunesAPI.cpp
maki/: std.mi
ml_http/: main.h  ml_http.vcproj
ml_xmlex/: main.cpp  ml_xmlex.rc  xmlview.cpp
wasabi/api/service/: api_service.h
wasabi/bfc/: dispatch.h
winamp/: ipc_pe.h
winamp-sdk/dsp_test/: Dsp_test.c  Dsp_test.mak  Dsp_test.mdp
winamp-sdk/gen_ml/: itemlist.cpp  itemlist.h  ml.h  ml_lib.cpp
winamp-sdk/gen_tray/: GEN_TRAY.sln  GEN_TRAY.vcproj  resource.h  script1.rc  trayctl.c
winamp-sdk/in_raw/: in_raw.c  in_raw.mak  in_raw.mdp  in_tone.c
winamp-sdk/lang_b/: lang_b.dsp  main.rc  resource.h  tips.txt
winamp-sdk/ml_http/: HTMLControl.cpp  HTMLControl.h  MessageProcessor.cpp  MessageProcessor.h  SampleHttp.cpp  api.h  config.cpp  config.h  main.cpp  main.h  ml_http.sln  preferences.cpp  resource.h
winamp-sdk/ml_xmlex/: XmlLoader.cpp  XmlLoader.h  api_xmlloadercallback.h  main.cpp  main.h  ml_xmlex.sln  resource.h  xmltest.xml  xmltest2.xml  xmlview.cpp
winamp-sdk/nu/: AutoChar.h  AutoWide.h  ChildSizer.cpp  ChildSizer.h  DialogSkinner.h  HTMLContainer.cpp  HTMLContainer.h  MediaLibraryInterface.cpp  MediaLibraryInterface.h  listview.cpp  listview.h
winamp-sdk/winamp/: gen.h  in2.h  wa_dlg.h
winamp-sdk/xml/: api_xml.h  api_xmlreadercallback.h  api_xmlreaderparams.h
xml/: api_xmlreadercallback.h
(+18 files in other folders)
